cleanup
Signed-off-by: Ben Sherman <bentshermann@gmail.com>